feat: find and play call, with some openai parsing

--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
   <body>
     
     <div id="headLogo">
-      <img src="./images/sonos_logo.png" width="80px">
+      <img src="./images/collab-logo.png" width="200px">
     </div>
 
     <div id="loginForm" class="column">
@@ -41,7 +41,14 @@
       </div>
     </div>
 
-    <div id="parseResults" class="column hide">
+    <div id="promptWrapper" class="column hide">
+      <div>
+        <textarea id="prompt"></textarea>
+        <button id="promptSubmit">Submit prompt</button>
+      </div>
+    </div>
+
+    <div id="parseResults" class="row hide">
       Creating playlist... hang tight...
     </div>
 
