fix: option to refresh groups and playing with the prompt

--- a/popup.html
+++ b/popup.html
@@ -46,6 +46,7 @@
     <div id="householdResults" class="column hide">
       <fieldset id="householdFieldset">
       </fieldset>
+      <span id="refreshGroups">Refresh groups</span>
     </div>
 
     <div id="playWrapper" class="column hide">
